examples/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freeradius
  labels:
    app.kubernetes.io/name: freeradius
    app.kubernetes.io/component: namespace
