examples/kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-freeradius
  namespace: freeradius
  labels:
    app.kubernetes.io/name: freeradius
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: freeradius
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: backup
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: freeradius-ingress
  namespace: freeradius
  labels:
    app.kubernetes.io/name: freeradius
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: freeradius
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: UDP
          port: 1812
        - protocol: UDP
          port: 1813
    - from:
        - podSelector: {}
      ports:
        - protocol: UDP
          port: 18121
